A3/dummy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a3ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 8084
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: kvis-backend
            port:
              number: 8082
